--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body bgcolor="6666ff">
-        Joao Leporic fabinho mamou mt fundo na rua de baixo
+        Te amo Vivizinha
     
 
     </body>
